# HindiBabyNet-Wav2Vec2-SSL

./: .env.example  .gitignore  README.md  dvc.yaml  pyproject.toml
artifacts/: .gitkeep
artifacts/manifests/: dev_split.parquet  raw_audio_manifest.parquet  train_split.parquet
artifacts/stats/: audio_stats.parquet  split_summary.json
artifacts/training/final_model/: README.md
artifacts/validation/: invalid_files.parquet  summary.json
docs/: Wav2Vec2_HomeDomain_SSL_Spec.md
scripts/: run_ingestion.sh  run_kmeans_labels.sh  run_push_hf.sh  run_push_hf_hubert.sh  run_train_hubert_ssl.sh  run_train_ssl.sh  run_transformation.sh  run_validation.sh
src/homewav2vec2/: __init__.py  __main__.py  cli.py
src/homewav2vec2/config/: data.yaml  defaults.yaml  training.yaml  training_hubert.yaml
src/homewav2vec2/data/: ingest.py  manifests.py  transform.py  validate.py
src/homewav2vec2/dataset/: audio_io.py  cropping.py  hf_dataset.py
src/homewav2vec2/train/: callbacks.py  ddp.py  kmeans_labels.py  run_pretrain.py  run_pretrain_hubert.py
src/homewav2vec2/utils/: env.py  logging.py  seed.py
tests/: test_cropping.py  test_hubert.py  test_manifest.py  test_training.py  test_validation.py
